src/tests/testfiles/function-declarations/2.txt
testfiles/function-declarations/2.c:5:1: error: Redefinition of function 'f'
int f(int a, int b) {
^
